explicetly specify the project id in request when creating a new project
