# api/openapi.yaml
@@ -8,7 +8,7 @@ info:
 paths:
   /projects:
     get:
-      summary: Get all projects
+      summary: Get the list of projects
       responses:
         200:
           description: Projects retrieved successfully
@@ -18,65 +18,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ProjectResponse'
-        500:
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProjectErrorResponse'
-    post:
-      summary: Create a new project
-      description: Create a new project and store the source code to the specified storage
-      requestBody:
-        description: Project details
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              required:
-                - metadata
-                - file
-              properties:
-                metadata:
-                  type: object
-                  properties:
-                    storage:
-                      type: string
-                      description: The project storage type
-                      enum:
-                        - local
-                    format:
-                      type: string
-                      description: The project format
-                      enum:
-                        - plain
-                        - targz
-                file:
-                  type: string
-                  format: binary
-                  description: A `.tar.gz` file containing project data.
-      responses:
-        201:
-          description: Project created successfully
-          headers:
-            Location:
-              description: The URL of the created project
-              schema:
-                type: string
-          content: {}
-        400:
-          description: Bad request, such as missing project metadata or file
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProjectErrorResponse'
-        409:
-          description: Project already exists
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProjectErrorResponse'
         500:
           description: Internal server error
           content:
@@ -145,6 +86,72 @@ paths:
                 $ref: '#/components/schemas/ProjectErrorResponse'
         500:
           description: An unexpected server error occurred while processing the request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProjectErrorResponse'
+    post:
+      summary: Create a new project
+      description: Create a new project and store the source code to the specified storage
+      parameters:
+        - name: id
+          in: path
+          description: The unique identifier of the project
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Project details
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - metadata
+                - file
+              properties:
+                metadata:
+                  type: object
+                  properties:
+                    storage:
+                      type: string
+                      description: The project storage type
+                      enum:
+                        - local
+                    format:
+                      type: string
+                      description: The project format
+                      enum:
+                        - plain
+                        - targz
+                file:
+                  type: string
+                  format: binary
+                  description: A `.tar.gz` file containing project source code.
+      responses:
+        201:
+          description: Project created successfully
+          headers:
+            Location:
+              description: The URL of the created project
+              schema:
+                type: string
+          content: {}
+        400:
+          description: Bad request, such as missing project id, metadata, or file
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProjectErrorResponse'
+        409:
+          description: Project already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProjectErrorResponse'
+        500:
+          description: Internal server error
           content:
             application/json:
               schema:
